<resources>
    <string name="app_name">Fresh</string>
    <string name="app_name_r">Фреш</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="log_in">Вход</string>
    <string name="log_in_admin">Вход администратора</string>
    <string name="form">Анкета</string>
    <string name="calendar">Календарь мероприятий</string>
    <string name="ranking">Рейтинги</string>
    <string name="list_of_events">Список мероприятий</string>
    <string name="events">Мероприятия</string>
    <string name="authors">Авторы</string>
    <string name="authors_page">Страница автора</string>
    <string name="experts">Экперты</string>
    <string name="experts_page">Страница автора</string>
    <string name="email">Email</string>
    <string name="user_name">Имя пользователя</string>
    <string name="enter_user_name">Введите имя пользователя</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="enter_password2">Введите пароль ещё раз</string>
    <string name="to_register">Зарегистрироваться</string>
    <string name="to_log_in">Войти</string>
    <string name="text_of_form">Введите каждому автору количество апельсинок от 1 до 10</string>
    <string name="submit">Отправить</string>
    <string name="authors_rating">Рейтинг авторов</string>
    <string name="visitors_rating">Рейтинг зрителей</string>
    <string name="past_events">Прошедшие</string>
    <string name="upcoming_events">Предстоящие</string>
    <string name="authors_winners">Победители среди авторов:</string>
    <string name="visitors_winners">Победители среди зрителей:</string>
    <string name="admins_page">Страница администратора</string>
    <string name="add_notofication">Добавить уведомление</string>
    <string name="remove">Удалить</string>
    <string name="edit">Редактировать</string>
    <string name="address">Адрес</string>
    <string name="time">Время</string>
    <string name="description">Описание</string>
    <string name="additional_questions">Дополнительные вопросы для анкеты на мероприятии (кубраи и прочее)</string>
    <string name="Question">Вопрос  №</string>
    <string name="add_question">Добавить ещё вопрос</string>
    <string name="add_event">Добавить мероприятие</string>
    <string name="add_author">Добавить автора</string>
    <string name="user">Пользователь</string>
    <string name="administrator">Администратор</string>
    <string name="undefined">Не зарегистрированный</string>
</resources>