...
                )
                Spacer(modifier = Modifier.height(16.dp))
                TextField(
                    //modifier = Modifier.padding(horizontal = 20.dp),
                    value = editedLastName.value,
                    onValueChange = { editedLastName.value = it },
                    label = { Text("Фамилия") },
                )
                Spacer(modifier = Modifier.height(20.dp))
                Row(
                    horizontalArrangement = Arrangement.Center
                ) {
                    Button(
...
                onClick = { isEditing.value = true },
                colors = ButtonDefaults.buttonColors(
                    containerColor = colorResource(id = R.color.green_home)
                ),
                modifier = Modifier.align(alignment = Alignment.CenterHorizontally)
            ) {
                Text(text = "Редактировать аккаунт")
            }
        }
        Spacer(modifier = Modifier.height(160.dp))
        //кнопки выхода и удаления акка
        Column(
            verticalArrangement = Arrangement.Bottom,
...
