...
                ),

                ) {
                Text(stringResource(id = R.string.to_log_in))
            }
            if(!isCorrectAll.value){
                MySnackBar(str = "Неверный логин или пароль")
            }
        }

    }
}

